--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dubbo-node-consumer-client",
-    "version": "1.0.7",
+    "version": "1.1.0",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -17,6 +17,8 @@
     },
     "homepage": "https://github.com/MarvinWilliam/dubbo-node-consumer-client#readme",
     "dependencies": {
+        "log4js": "^0.6.38",
+        "mkdirp": "^0.5.1",
         "node-zookeeper-client": "^0.2.2",
         "request": "^2.75.0",
         "underscore": "^1.8.3"
